Filling out title slide a bit

--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -21,11 +21,18 @@
 
     <div id="title" data-timecontainer="par">
 
-      <div data-timecontainer="par" data-role="wall">
+      <div data-timecontainer="par" data-role="wall" 
+           class="c1 r1 h3 w4" style="background-color: black">
         <div class="c1 r1 w1 h1 textpanel">
-          Tim Whitfeld
+          <span>Erika Edwards</span>
         </div>
-        <div class="c1 r1 w1 h1 image" style="background-image: url()"></div>
+        <div class="c1 r2 w1 h1 textpanel">
+          <span>Tim Whitfeld</span>
+        </div>
+        <div class="c1 r3 w1 h1 textpanel">
+          <span>Patrick Rashleigh</span>
+        </div>
+        <div class="c2 r1 w2 h2 image" style="background-image: url('http://i.huffpost.com/gen/1629143/images/o-BRAIN-IMPLANT-MONKEYS-facebook.jpg')"></div>
       </div>
 
       <div data-timecontainer="par" data-role="audience">
