test placement of specimen image as background image for whole wall (in title slide)

--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -23,21 +23,16 @@
 
       <div data-timecontainer="par" data-role="wall" 
            class="c1 r1 h3 w4" style="background-color: black">
-        <div class="c1 r1 w1 h1 textpanel">
-          <span>Erika Edwards</span>
+        
+        <div class="c1 r1 w4 h3 image" style="background-image: url(images/PBRU00008406-sizedcrop7680x3240.jpg)">
         </div>
-        <div class="c1 r2 w1 h1 textpanel">
-          <span>Tim Whitfeld</span>
-        </div>
-        <div class="c1 r3 w1 h1 textpanel">
-          <span>Patrick Rashleigh</span>
-        </div>
-        <div class="c2 r1 w2 h2 image" style="background-image: url('http://i.huffpost.com/gen/1629143/images/o-BRAIN-IMPLANT-MONKEYS-facebook.jpg')"></div>
+        
       </div>
 
       <div data-timecontainer="par" data-role="audience">
 
       </div>
+
     </div>
 
     <!-- Patrick intro slide (TBD) -->
