--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -26,6 +26,10 @@
         
         <div class="c1 r1 w4 h3 image" style="background-image: url(images/PBRU00008406-sizedcrop7680x3240.jpg)">
         </div>
+
+        <div class="c2 r1 w3 h1" style="background-color: #4f3528; opacity: .67;">
+          <p style="font-family:MinionRoman;font-size:190%;color:white;text-align:center;">A History of Brown&thinsp;&hellip;&thinsp;as Told by Flowers</p>
+        </div>
         
       </div>
 
