test name placement (over tint of Brown red)

--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -30,7 +30,22 @@
         <div class="c2 r1 w3 h1" style="background-color: #4f3528; opacity: .67;">
           <p style="font-family:MinionRoman;font-size:190%;color:white;text-align:center;">A History of Brown&thinsp;&hellip;&thinsp;as Told by Flowers</p>
         </div>
+
+        <div class="c1 r2 w3 h1" style="background-color: #dd0033; opacity: .20;">
+        </div>
         
+       <div class="c1 r2 w1 h1" style="background: none">
+          <p style="font-family:MinionRoman;font-size:134%;color:black;text-align:center;margin-top:20%;">Erika Edwards</p>
+        </div>
+
+       <div class="c2 r2 w1 h1" style="background: none">
+          <p style="font-family:MinionRoman;font-size:134%;color:black;text-align:center;margin-top:20%;">Tim Whitfeld</p>
+        </div>
+
+       <div class="c3 r2 w1 h1" style="background: none">
+          <p style="font-family:MinionRoman;font-size:134%;color:black;text-align:center;margin-top:20%;">Patrick Rashleigh</p>
+        </div>
+
       </div>
 
       <div data-timecontainer="par" data-role="audience">
