test "commencement 2015" row addition; inline CSS syntax fix

--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -22,7 +22,7 @@
     <div id="title" data-timecontainer="par">
 
       <div data-timecontainer="par" data-role="wall" 
-           class="c1 r1 h3 w4" style="background-color: black">
+           class="c1 r1 h3 w4" style="background-color: black;">
         
         <div class="c1 r1 w4 h3 image" style="background-image: url(images/PBRU00008406-sizedcrop7680x3240.jpg)">
         </div>
@@ -34,16 +34,23 @@
         <div class="c1 r2 w3 h1" style="background-color: #dd0033; opacity: .20;">
         </div>
         
-       <div class="c1 r2 w1 h1" style="background: none">
+        <div class="c1 r2 w1 h1" style="background: none;">
           <p style="font-family:MinionRoman;font-size:134%;color:black;text-align:center;margin-top:20%;">Erika Edwards</p>
         </div>
 
-       <div class="c2 r2 w1 h1" style="background: none">
+        <div class="c2 r2 w1 h1" style="background: none;">
           <p style="font-family:MinionRoman;font-size:134%;color:black;text-align:center;margin-top:20%;">Tim Whitfeld</p>
         </div>
 
-       <div class="c3 r2 w1 h1" style="background: none">
+        <div class="c3 r2 w1 h1" style="background: none;">
           <p style="font-family:MinionRoman;font-size:134%;color:black;text-align:center;margin-top:20%;">Patrick Rashleigh</p>
+        </div>
+
+        <div class="c4 r3 w1 h1" style="background-color: #4f3528; opacity: .20;">
+        </div>
+
+        <div class="c4 r3 w1 h1" style="background: none;">
+          <p style="font-family:MinionRoman;font-size:100%;color:#dd0033;text-align:left;margin-top:20%;letter-spacing:.1em;margin-left:10%;">COMMENCEMENT <br> 2015</p>
         </div>
 
       </div>
