test add of Herbarium logo to upper left screen

--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -24,13 +24,16 @@
       <div data-timecontainer="par" data-role="wall" 
            class="c1 r1 h3 w4" style="background-color: black;">
         
+        <div class="c1 r1 w1 h1 image" style="background-image: url(images/HerbariumFinalLogo.png);z-index:10;margin-left:2%;width:21%;opacity:.5;margin-top:-1.25%;">
+        </div>
+
         <div class="c1 r1 w4 h3 image" style="background-image: url(images/PBRU00008406-sizedcrop7680x3240.jpg)">
         </div>
 
         <div class="c2 r1 w3 h1" style="background-color: #dd0033; opacity: .43;">
         </div>
 
-       <div class="c2 r1 w3 h1" style="background: none;">
+        <div class="c2 r1 w3 h1" style="background: none;">
           <p style="font-family:MinionRoman;font-size:190%;color:white;text-align:center;">A History of Brown&thinsp;&hellip;&thinsp;as Told by Flowers</p>
         </div>
 
