--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -24,7 +24,7 @@
       <div data-timecontainer="par" data-role="wall" 
            class="c1 r1 h3 w4" style="background-color: black;">
         
-        <div class="c1 r1 w1 h1 image" style="background-image: url(images/HerbariumFinalLogo.png);z-index:10;margin-left:2%;width:21%;opacity:.5;margin-top:-1.25%;">
+        <div class="c1 r1 w1 h1 image" style="background-image: url(images/HerbariumFinalLogo.png);z-index:10;margin-left:2%;width:21%;opacity:.6;margin-top:-1.25%;">
         </div>
 
         <div class="c1 r1 w4 h3 image" style="background-image: url(images/PBRU00008406-sizedcrop7680x3240.jpg)">
@@ -50,6 +50,12 @@
 
         <div class="c3 r2 w1 h1" style="background: none;">
           <p style="font-family:MinionRoman;font-size:134%;color:#d6b2a1;text-align:center;margin-top:20%;">Patrick Rashleigh</p>
+        </div>
+
+        <div class="c1 r3 w1 h1" style="background-color: white; opacity: .67;">
+        </div>
+
+        <div class="c1 r3 w1 h1 image" style="background-image: url(images/BULlogos_v4.png);z-index:10;margin-left:2%;width:21%;opacity:1;">
         </div>
 
         <div class="c4 r3 w1 h1" style="background-color: #4f3528; opacity: .20;">
