Moved Commencement to top of diesel front page listing, added link to Commencement controller

--- a/index.html
+++ b/index.html
@@ -26,6 +26,23 @@
 <body>
   <h1>DieSeL: A platform for a scholarly environment</h1>
 
+
+
+  <div class="panel panel-default">
+    <div class="panel-heading">Commencement</div>
+    <div class="panel-body">
+      <p>
+        <em>Herbarium for the people</em>
+      </p>
+    </div>
+    <div class="list-group">
+      <a class="list-group-item" href="sites/commencement/index.html?role=wall">Wall view</a>
+      <a class="list-group-item" href="sites/commencement/index.html?role=audience">Audience view</a>
+      <a class="list-group-item" href="sites/commencement/control.html">Presenter controller</a>
+    </div>
+  </div>
+  
+
   <div class="panel panel-default">
     <div class="panel-heading">Main Demo</div>
     <div class="panel-body">
@@ -66,19 +83,6 @@
       <a class="list-group-item" href="sites/miranda_olsen/index.html?role=wall">Wall view</a>
       <a class="list-group-item" href="sites/miranda_olsen/index.html?role=mobile">Mobile view</a>
       <a class="list-group-item" href="sites/miranda_olsen/control.html">Controller view</a>
-    </div>
-  </div>
-  
-  <div class="panel panel-default">
-    <div class="panel-heading">Commencement</div>
-    <div class="panel-body">
-      <p>
-        <em>Herbarium for the people</em>
-      </p>
-    </div>
-    <div class="list-group">
-      <a class="list-group-item" href="sites/commencement/index.html?role=wall">Wall view</a>
-      <a class="list-group-item" href="sites/commencement/index.html?role=audience">Audience view</a>
     </div>
   </div>
   
