Better flow of map slide

--- a/sites/commencement/control.html
+++ b/sites/commencement/control.html
@@ -57,9 +57,10 @@
     <a id="activity-1" class="list-group-item"> Activity setup </a>
     <a id="activity-2" class="list-group-item"> Activity results </a>
     <a id="why" class="list-group-item"> Why the Harbarium? </a>
-    <a id="cat-swamp-map-1" class="list-group-item"> Cat swamp - <strong>Historical</strong> </a>
-    <a id="cat-swamp-map-2" class="list-group-item"> Cat swamp - <strong>Contemporary</strong></a>
-    <a id="cat-swamp-map-3" class="list-group-item"> Cat swamp - <strong>Satellite</strong></a>
+    <a id="cat-swamp-map" class="list-group-item"> Cat swamp - <strong>Start</strong> </a>
+    <a id="cat-swamp-map-historical" class="list-group-item"> Cat swamp - <strong>Historical</strong> </a>
+    <a id="cat-swamp-map-contemporary" class="list-group-item"> Cat swamp - <strong>Contemporary</strong></a>
+    <a id="cat-swamp-map-satellite" class="list-group-item"> Cat swamp - <strong>Satellite</strong></a>
     <a id="treemap" class="list-group-item"> Cat swamp specimens </a>
   </div>
 </body>
