Develop treemap slide

--- a/sites/commencement/control.html
+++ b/sites/commencement/control.html
@@ -61,7 +61,10 @@
     <a id="cat-swamp-map-historical" class="list-group-item"> Cat swamp - <strong>Historical</strong> </a>
     <a id="cat-swamp-map-contemporary" class="list-group-item"> Cat swamp - <strong>Contemporary</strong></a>
     <a id="cat-swamp-map-satellite" class="list-group-item"> Cat swamp - <strong>Satellite</strong></a>
-    <a id="treemap" class="list-group-item"> Cat swamp specimens </a>
+    <a id="treemap" class="list-group-item"> Cat swamp specimens - start </a>
+    <a id="cat-swamp-specimen-1" class="list-group-item"> Cat swamp specimen 1 </a>
+    <a id="cat-swamp-specimen-2" class="list-group-item"> Cat swamp specimen 2 </a>
+    
   </div>
 </body>
 </html>
