PR Intro placeholder

--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -83,8 +83,9 @@
 
     <div id="library-intro" data-timecontainer="par">
 
-      <div data-timecontainer="par" data-role="wall">
-
+      <div data-timecontainer="par" data-role="wall" 
+        class="c2 r2 w2 h1 textpanel" style="background-color: red">
+        [ PR intro ]
       </div>
 
       <div data-timecontainer="par" data-role="audience">
