--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -34,22 +34,22 @@
         </div>
 
         <div class="c2 r1 w3 h1" style="background: none;">
-          <p style="font-family:MinionRoman;font-size:19em;color:white;text-align:center;">A History of Brown&thinsp;&hellip;&thinsp;as Told by Flowers</p>
+          <p style="font-family:MinionRoman;font-size:19em;color:white;text-align:center;text-shadow: 10px 10px #4f3528;">A History of Brown&thinsp;&hellip;&thinsp;as Told by Flowers</p>
         </div>
 
         <div class="c1 r2 w3 h1" style="background-color: #4f3528; opacity: .5;">
         </div>
         
         <div class="c1 r2 w1 h1" style="background: none;">
-          <p style="font-family:MinionRoman;font-size:12em;color:#d6b2a1;text-align:center;margin-top:20%;">Erika Edwards</p>
+          <p style="font-family:MinionRoman;font-size:12em;color:#d6b2a1;text-align:center;margin-top:20%;text-shadow: 7px 7px #4f3528;">Erika Edwards</p>
         </div>
 
         <div class="c2 r2 w1 h1" style="background: none;">
-          <p style="font-family:MinionRoman;font-size:12em;color:#d6b2a1;text-align:center;margin-top:20%;">Tim Whitfeld</p>
+          <p style="font-family:MinionRoman;font-size:12em;color:#d6b2a1;text-align:center;margin-top:20%;text-shadow: 7px 7px #4f3528;">Tim Whitfeld</p>
         </div>
 
         <div class="c3 r2 w1 h1" style="background: none;">
-          <p style="font-family:MinionRoman;font-size:12em;color:#d6b2a1;text-align:center;margin-top:20%;">Patrick Rashleigh</p>
+          <p style="font-family:MinionRoman;font-size:12em;color:#d6b2a1;text-align:center;margin-top:20%;text-shadow: 7px 7px #4f3528;">Patrick Rashleigh</p>
         </div>
 
         <div class="c1 r3 w1 h1" style="background-color: white; opacity: .67;">
