Heinous grammatical crime corrected.

--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -103,7 +103,7 @@
       <div data-role="wall" class="textpanel c3 r2 w1 h1" 
            style="background-color: red; background-opacity: .5"
            data-onbegin="2s">
-        <span>So what is an Herbarium?</span>
+        <span>So what is a Herbarium?</span>
       </div>
       
       <div data-role="audience" data-timecontainer="par" class="fullscreen-textpanel"
