swap in link to new 1750 map scan (cropped JPEG version) for treemap slides

--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -309,7 +309,7 @@
         <!-- Map (stays up as we go through the plant examples) -->
         
         <div class="w1 h2 r2 c4 image-cover" 
-             style="background-image: url(images/cat-swamp-historical-map.png)"
+             style="background-image: url(images/1750-portion-of-Prov-from-1size-F89-P9c143-1957-p27_map-8bit+contrast_cropped.jpg)"
              data-role="wall">
           
         </div>
