minor: styling text and background tint for 'what-is' text tile

--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -101,9 +101,11 @@
            style="background-image: url('images/NewHerbarium1.jpg')">
       </div>
       <div data-role="wall" class="textpanel c3 r2 w1 h1" 
-           style="background-color: red; background-opacity: .5"
+           style="background-color: #dd0033; opacity: .75;"
            data-onbegin="2s">
-        <span>So what is a Herbarium?</span>
+      </div>
+      <div class="c3 r2 w1 h1" style="background: none;">
+        <p style="font-family:MinionRoman;font-size:15em;color:white;text-align:center;text-shadow: 10px 10px #4f3528;">So what is a Herbarium?</p>
       </div>
       
       <div data-role="audience" data-timecontainer="par" class="fullscreen-textpanel"
