add cat-swamp-map historical image (1 of 3)

--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -258,7 +258,8 @@
         
         <div id="cat-swamp-map-historical" data-timecontainer="par" title="&rarr; Historical map">
           <!-- Wall view -->
-          <div class="r1 c1 w4 h3 image" data-role="wall" style="background-color: yellow"></div>
+          <div class="r1 c1 w4 h3 image" data-role="wall" style="background-image: url(images/cat-swamp-maps_imageplacement_1.jpg);"></div>
+
           <!-- Audience -->
           <div data-role="audience">
             Historical map audience content
@@ -287,9 +288,10 @@
           </div>
         </div>
       </div>
-      <div class="r1 c3 w1 h1 image" data-role="wall" style="background-color: green" data-begin="3s">
-        <!-- swamp highlight -->
+      <!-- swamp hightlight moved to images
+      <div class="r1 c3 w1 h1 image" data-role="wall" style="background-color: green; opacity:.67;" data-begin="3s">
       </div>
+       -->
     </div>
     
     <!-- Cat swamp treemap -->
