add cat-swamp-map contemporary image (2 of 3)

--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -288,7 +288,7 @@
         
         <div id="cat-swamp-map-contemporary" data-timecontainer="par" title="&rarr; Contemporary map">
           <!-- Wall view -->
-          <div class="r1 c1 w4 h3 image" data-role="wall" style="background-color: orange"></div>
+          <div class="r1 c1 w4 h3 image" data-role="wall" style="background-image: url(images/cat-swamp-maps-higher-res/cat-swamp-maps_imageplacement_2.jpg);"></div>
           <!-- Audience -->
           <div data-role="audience">
             Contemporary map audience content
