--- a/sites/commencement/control.html
+++ b/sites/commencement/control.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Slide Nav</title>
+  <title>Commencement Navigation</title>
   <!-- Bootstrap -->
   <link rel="stylesheet" href="../../style/bootstrap.min.css"> </link>
   <!-- jQuery -->
@@ -54,6 +54,7 @@
     <a id="timeline" class="list-group-item"> Timeline </a>
     <a id="world" class="list-group-item"> World map </a>
     <a id="digitization" class="list-group-item"> Digitization </a>
+    <a id="card-blowups" class="list-group-item"> Card blow-ups </a>
     <a id="activity-1" class="list-group-item"> Activity setup </a>
     <a id="activity-2" class="list-group-item"> Activity results </a>
     <a id="why" class="list-group-item"> Why the Harbarium? </a>
@@ -62,9 +63,9 @@
     <a id="cat-swamp-map-contemporary" class="list-group-item"> Cat swamp - <strong>Contemporary</strong></a>
     <a id="cat-swamp-map-satellite" class="list-group-item"> Cat swamp - <strong>Satellite</strong></a>
     <a id="treemap" class="list-group-item"> Cat swamp specimens - start </a>
-    <a id="cat-swamp-specimen-1" class="list-group-item"> Cat swamp specimen 1 </a>
-    <a id="cat-swamp-specimen-2" class="list-group-item"> Cat swamp specimen 2 </a>
-    
+    <a id="cat-swamp-specimen-1" class="list-group-item"> Berberis vulgaris </a>
+    <a id="cat-swamp-specimen-2" class="list-group-item"> Habenaria lacera </a>
+    <a id="cat-swamp-specimen-3" class="list-group-item"> Caltha palustris </a>
   </div>
 </body>
 </html>
