de-yellow 2 digitization photos

--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -162,9 +162,9 @@
         <div data-timecontainer="par" data-role="wall"
           class="r2 c4 w1 h1 image-cover" style="background-image: url('images/digitization/P1030416.JPG')"></div>
         <div data-timecontainer="par" data-role="wall"
-          class="r1 c4 w1 h1 image-cover" style="background-image: url('images/digitization/P1030417.JPG')"></div>
+          class="r1 c4 w1 h1 image-cover" style="background-image: url('images/digitization/P1030417-adjusted.jpg')"></div>
         <div data-timecontainer="par" data-role="wall"
-          class="r3 c4 w1 h1 image-cover" style="background-image: url('images/digitization/P1030420.JPG')"></div>
+          class="r3 c4 w1 h1 image-cover" style="background-image: url('images/digitization/P1030420-adjusted.jpg')"></div>
         
         <div data-timecontainer="seq" data-role="wall">
           <!-- Empty element, then ...  -->
