add cat-swamp-map satellite view (3 of 3) – low-res. temp file

--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -314,7 +314,7 @@
             <div id="cat-swamp-map-satellite" data-timecontainer="par" title="&rarr; Satellite map"
               data-onbegin="DSL.config.slideEvents['cat-swamp-map-satellite'].onbegin()">
               <!-- Wall view -->
-              <div class="r1 c1 w4 h3 image" data-role="wall" style="background-color: red"
+              <div class="r1 c1 w4 h3 image" data-role="wall" style="background-image: url(images/cat-swamp-maps-higher-res/cat-swamp-maps_imageplacement_3-lowrestemp.jpg);"
                    data-begin="3s"></div>
               <!-- Audience -->
               <div data-role="audience">
