--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -84,7 +84,7 @@
     <div id="library-intro" data-timecontainer="par" title="Opening remarks from Patrick">
 
       <div data-timecontainer="par" data-role="wall" 
-        class="c2 r2 w2 h1 textpanel" style="background-color: red">
+        class="c2 r2 w2 h1 textpanel" style="background-color: #dd0033">
         [ PR intro ]
       </div>
 
@@ -138,7 +138,7 @@
       
       <div data-timecontainer="par" data-role="wall"
         class="c1 r1 h3 w4 image" 
-        style="background-color: black; background-image: url('images/BlankMap-World6.svg');">
+        style="background-color: black; background-image: url('images/BlankMap-World6-Brownred.svg');">
       </div>
 
       <div data-timecontainer="par" data-role="audience">
