switch cat-swamp-map 2 to png vs. jpg (for top fade background transparency, due to req. 3º alignment rotation)

--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -301,7 +301,7 @@
           <!-- Wall view -->
           <div id="cat-swamp-map-contemporary-2" class="r1 c1 w4 h3 image" 
                 data-role="wall" 
-                style="background-image: url(images/cat-swamp-maps-higher-res/cat-swamp-maps_imageplacement_2.jpg);"></div>
+                style="background-image: url(images/cat-swamp-maps-higher-res/cat-swamp-maps_imageplacement_2.png);"></div>
           <!-- Audience -->
           <div data-role="audience">
             Contemporary map audience content
