minor: switch svg map red to "Brown red" via its embedded CSS (vs. via new file)

--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -140,7 +140,7 @@
       
       <div data-timecontainer="par" data-role="wall"
         class="c1 r1 h3 w4 image" 
-        style="background-color: black; background-image: url('images/BlankMap-World6-Brownred.svg');">
+        style="background-color: black; background-image: url('images/BlankMap-World6.svg');">
       </div>
 
       <div data-timecontainer="par" data-role="audience">
