Changed BG color of activity results page

--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -245,19 +245,19 @@
 
       <div data-timecontainer="par" data-role="wall" style="background-color: #ddd">
         <div class="c1 r1 w1 h1 image" style="background-image: url('images/activity-labels/Label-1_bdr405865.png')"></div>
-        <div class="c1 r2 w1 h2 activity-results" id="results1" style="background-color: red">
+        <div class="c1 r2 w1 h2 activity-results" id="results1" style="background-color: black">
           <span>Text</span>
         </div>
         <div class="c2 r1 w1 h1 image" style="background-image: url('images/activity-labels/Label-3_bdr390461.png')"></div>
-        <div class="c2 r2 w1 h2 activity-results" id="results2" style="background-color: green">
+        <div class="c2 r2 w1 h2 activity-results" id="results2" style="background-color: black">
           <span>Text</span>
         </div>
         <div class="c3 r1 w1 h1 image" style="background-image: url('images/activity-labels/Label-2_bdr390790.png')"></div>
-        <div class="c3 r2 w1 h2 activity-results" id="results3" style="background-color: red">
+        <div class="c3 r2 w1 h2 activity-results" id="results3" style="background-color: black">
           <span>Text</span>
         </div>
         <div class="c4 r1 w1 h1 image" style="background-image: url('images/activity-labels/Label-4_bdr391598.png')"></div>
-        <div class="c4 r2 w1 h2 activity-results" id="results4" style="background-color: red">
+        <div class="c4 r2 w1 h2 activity-results" id="results4" style="background-color: black">
           <span>Text</span>
         </div>
       </div>
