minor: change year text color

--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -135,7 +135,7 @@
           <!-- First year -->
           
           <div id="y1869" title="First year" data-timecontainer="par">
-            <div class="r1 c4 h1 w1 textpanel"><span style="font-size:4.25em;color:#d6b2a1;">1869</span></div>
+            <div class="r1 c4 h1 w1 textpanel"><span style="font-size:4.25em;color:#e6dec4;">1869</span></div>
             <div class="r1 c3 h1 w1 textpanel"><span style="font-size:.91em;">Stephen Thayer Olney donated his herbarium collection to Brown</span></div>
             <div class="r1 c2 h2 w1 image" style="background-image: url(images/timeline-images/StephenOlney.jpg);background-size:cover;"></div>
             <div class="r2 c4 h2 w1" style="background-image: url(images/timeline-images/PBRU00003272-Olney.jpg);background-size:cover;"></div>
