--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -150,6 +150,15 @@
             <div class="r2 c4 h2 w1" style="background-image: url(images/timeline-images/PBRU00005342-Bailey.jpg);background-size:cover;"></div>
           </div>
           
+          <!-- Third year -->
+          
+          <div id="y1879" title="Third year" data-timecontainer="par">
+            <div class="r1 c4 h1 w1 textpanel"><span style="font-size:4.25em;color:#e6dec4;">1879</span></div>
+            <div class="r1 c3 h1 w1 textpanel"><span style="font-size:.80em;text-align:left;margin-left:7%;width:93%;">Herbarium moved to Robinson Hall</span></div>
+            <div class="r1 c2 h2 w1 image" style="background-image: url(images/timeline-images/RobinsonHall.jpg);background-size:cover;"></div>
+            <!-- <div class="r2 c4 h2 w1" style="background-image: url(images/timeline-images/);background-size:cover;"></div> -->
+          </div>
+
         </div>
       </div>
 
