timeline screen formatting (for Bailey timeline slides 4 & 5)

--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -159,6 +159,24 @@
             <!-- <div class="r2 c4 h2 w1" style="background-image: url(images/timeline-images/);background-size:cover;"></div> -->
           </div>
 
+          <!-- Fourth year -->
+          
+          <div id="y1880" title="Fourth year" data-timecontainer="par">
+            <div class="r1 c4 h1 w1 textpanel"><span style="font-size:4.25em;color:#e6dec4;">1880</span></div>
+            <div class="r1 c3 h1 w1 textpanel"><span style="font-size:.80em;text-align:left;margin-left:7%;width:93%;">William Bailey becomes first Professor of Botany at Brown</span></div>
+            <div class="r1 c2 h2 w1 image" style="background-image: url(images/timeline-images/WilliamWhitmanBailey3.jpg);background-size:cover;"></div>
+            <!-- <div class="r2 c4 h2 w1" style="background-image: url(images/timeline-images/);background-size:cover;"></div> -->
+          </div>
+
+          <!-- Fifth year -->
+          
+          <div id="y1881" title="Fifth year" data-timecontainer="par">
+            <div class="r1 c4 h1 w1 textpanel"><span style="font-size:4.25em;color:#e6dec4;">1881</span></div>
+            <div class="r1 c3 h1 w1 textpanel"><span style="font-size:.80em;text-align:left;margin-left:7%;width:93%;">Bailey becomes first Stephen Thayer Olney Professor of Natural History</span></div>
+            <div class="r1 c2 h2 w1 image" style="background-image: url(images/timeline-images/WilliamWhitmanBailey3.jpg);background-size:cover;"></div>
+            <!-- <div class="r2 c4 h2 w1" style="background-image: url(images/timeline-images/);background-size:cover;"></div> -->
+          </div>
+
         </div>
       </div>
 
