--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -186,6 +186,15 @@
             <!-- <div class="r2 c4 h2 w1" style="background-image: url(images/timeline-images/);background-size:cover;"></div> -->
           </div>
 
+          <!-- Seventh year -->
+
+          <div id="y1890" title="Seventh year" data-timecontainer="par">
+            <div class="r1 c4 h1 w1 textpanel"><span style="font-size:4.25em;color:#e6dec4;">1890</span></div>
+            <div class="r1 c3 h1 w1 textpanel"><span style="font-size:.80em;text-align:left;margin-left:7%;width:93%;">James Lawrence Bennett, local jeweler and amateur botanist, became curator of the Brown Herbarium</span></div>
+            <!-- <div class="r1 c2 h2 w1 image" style="background-image: url(images/timeline-images/);background-size:cover;"></div> -->
+            <!-- <div class="r2 c4 h2 w1" style="background-image: url(images/timeline-images/);background-size:cover;"></div> -->
+          </div>
+
         </div>
       </div>
 
