add slide 8 image + text edits

--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -199,8 +199,8 @@
 
           <div id="y1894" title="&rarr; Eighth year" data-timecontainer="par">
             <div class="r1 c4 h1 w1 textpanel"><span style="font-size:4.25em;color:#e6dec4;">1894</span></div>
-            <div class="r1 c3 h1 w1 textpanel"><span style="font-size:.80em;text-align:left;margin-left:7%;width:93%;">James Franklin Collins (left), a silversmith with the Gorham Manafacturing Co., became herbarium curator</span></div>
-            <!-- <div class="r1 c2 h2 w1 image" style="background-image: url(images/timeline-images/);background-size:cover;"></div> -->
+            <div class="r1 c3 h1 w1 textpanel"><span style="font-size:.80em;text-align:left;margin-left:7%;width:93%;">James Franklin Collins (left), a silversmith with Gorham Manafacturing, became herbarium curator</span></div>
+            <div class="r1 c2 h2 w1 image" style="background-image: url(images/timeline-images/Collins.jpg);background-size:cover;"></div>
             <!-- <div class="r2 c4 h2 w1" style="background-image: url(images/timeline-images/);background-size:cover;"></div> -->
           </div>
 
