timeline screen formatting (for timeline slide 12)

--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -231,6 +231,15 @@
             <!-- <div class="r2 c4 h2 w1" style="background-image: url(images/timeline-images/);background-size:cover;"></div> -->
           </div>
 
+         <!-- Twelfth year -->
+
+          <div id="y1938" title="&rarr; Twelfth year" data-timecontainer="par">
+            <div class="r1 c4 h1 w1 textpanel"><span style="font-size:4.25em;color:#e6dec4;">1938</span></div>
+            <div class="r1 c3 h1 w1 textpanel"><span style="font-size:.80em;text-align:left;margin-left:7%;width:93%;">Herbarium moved to Salomon Hall [Center, Rogers Hall?]</span></div>
+            <div class="r1 c2 h2 w1 image" style="background-image: url(images/timeline-images/SalomonCenterRogersHall.jpg);background-size:cover;"></div>
+            <!-- <div class="r2 c4 h2 w1" style="background-image: url(images/timeline-images/);background-size:cover;"></div> -->
+          </div>
+
         </div>
       </div>
 
