--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -265,7 +265,16 @@
             <div class="r1 c3 h1 w1 textpanel"><span style="font-size:.80em;text-align:left;margin-left:7%;width:93%;">Annie Schmitt became herbarium curator</span></div>
             <div class="r1 c2 h2 w1 image" style="background-image: url(images/timeline-images/AnnieSchmitt.jpg);background-size:cover;"></div>
             <!-- <div class="r2 c4 h2 w1" style="background-image: url(images/timeline-images/);background-size:cover;"></div> -->
-          </div>          
+          </div>
+
+         <!-- 16th year -->
+
+          <div id="y2008" title="&rarr; 2008" data-timecontainer="par">
+            <div class="r1 c4 h1 w1 textpanel"><span style="font-size:4.25em;color:#e6dec4;">2008</span></div>
+            <div class="r1 c3 h1 w1 textpanel"><span style="font-size:.80em;text-align:left;margin-left:7%;width:93%;">Erika Edwards became herbarium curator</span></div>
+            <div class="r1 c2 h2 w1 image" style="background-image: url(images/timeline-images/);background-size:cover;"></div>
+            <!-- <div class="r2 c4 h2 w1" style="background-image: url(images/timeline-images/);background-size:cover;"></div> -->
+          </div>
 
         </div>
       </div>
