--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -276,6 +276,15 @@
             <!-- <div class="r2 c4 h2 w1" style="background-image: url(images/timeline-images/);background-size:cover;"></div> -->
           </div>
 
+        <!-- 17th year -->
+
+          <div id="y2013" title="&rarr; 2013" data-timecontainer="par">
+            <div class="r1 c4 h1 w1 textpanel"><span style="font-size:4.25em;color:#e6dec4;">2013</span></div>
+            <div class="r1 c3 h1 w1 textpanel"><span style="font-size:.80em;text-align:left;margin-left:7%;width:93%;">Herbarium moved to BioMedical Center</span></div>
+            <div class="r1 c2 h2 w1 image" style="background-image: url(images/timeline-images/NewHerbarium3.jpg);background-size:cover;"></div>
+            <!-- <div class="r2 c4 h2 w1" style="background-image: url(images/timeline-images/);background-size:cover;"></div> -->
+          </div>
+
         </div>
       </div>
 
