Future directions slide placeholder

--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -612,5 +612,15 @@
 
       </div>
     </div>
+    
+    <!--  Future directions slide  -->
+    
+    <div id="future" title="Future Directions" data-timecontainer="par">
+      <div data-timecontainer="par" data-role="wall" class="h3 w4 c1 r1" style="background-color: green">
+        <div class="w1 h1 r2 c3 textpanel">
+          <span>[future directions]</span>
+        </div>
+      </div>
+    </div>
 </body>
 </html>
