--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -203,7 +203,7 @@
             <div class="r1 c4 h1 w1"><span style="font-size:52em;color:#e6dec4;width:100%;margin-left:5%;">1869</span></div>
             <div class="r1 c3 h1 w1 textpanel"><span style="font-size:.75em;text-align:left;margin-left:7%;width:93%;">Stephen Thayer Olney donated his herbarium collection to Brown</span></div>
             <div class="r1 c2 h2 w1 image" style="background-image: url(images/timeline-images/StephenOlney.jpg);background-size:cover;"></div>
-            <div class="r1 c1 h1 w1" style="color: white; font-size: 5em; text-align: right"> 
+            <div class="r1 c1 h1 w1" style="color: white; font-size: 5em; text-align: right;"> 
               ANSP Archives Collection 508/Courtesy, 
               Academy of Natural Sciences of Drexel University.
             </div>
