minor: made map dots "Brown red" (based on PMS 199)

--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -139,7 +139,7 @@
           style="z-index:100000">
           
           <defs>
-            <circle fill="red" r="20" id="timeline-map-point"></circle>
+            <circle fill="#dd0033" r="20" id="timeline-map-point"></circle>
           </defs>
           
           <g id="timeline-map-points" transform="rotate(-10) scale(1.1,1) translate(-850,0)"></g>
