No need for Google API

--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -10,7 +10,7 @@
 
   <title>Commencement 2015 Talk</title>
 
-  <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+  <!--<script type="text/javascript" src="https://www.google.com/jsapi"></script>-->
   <script src="scripts/map-data.js"></script>
 
   <link rel="stylesheet" type="text/css" href="../../style/main.css" />
