Bigger treemap labels

--- a/sites/commencement/content/treemap/index.html
+++ b/sites/commencement/content/treemap/index.html
@@ -49,6 +49,8 @@
         color: white;
         z-index: 10000;
         text-shadow: 0.1em 0.1em black;
+        font-size: 250%;
+        padding-top: 1em;
       }
       
       .labels .nodelabel span { 
