New div to hold image for "What is?" slide

--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -114,6 +114,9 @@
         <p style="font-family:MinionRoman;font-size:15em;color:white;text-align:center;text-shadow: 10px 10px #4f3528;">So what is a Herbarium?</p>
       </div>
       
+      <div class="c1 r1 w1 h1 image" style="background-image: url(); background: green" data-begin="8s" data-timecontainer="par">
+      </div>
+      
       <div data-role="audience" data-timecontainer="par" class="fullscreen-textpanel"
         data-onbegin="$('body').css('background-color', '#f55');"
         data-onend="$('body').css('background-color', 'white');">
