--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -1,9 +1,6 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 
-<!--<!DOCTYPE html>
-<html lang="en">-->
-
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="initial-scale=1, width=device-width, user-scalable=no"></meta>
@@ -316,7 +313,7 @@
             data-onbegin="DSL.config.setTimelineTo(2500); DSL.config.showMapPointsTo('1920');">
             <div class="timeline-label" data-begin="2s" style="top: 1600px; left: 2400px">17,329 specimens</div>
             <div class="r1 c4 h1 w1"><span style="font-size:52em;color:#e6dec4;width:100%;margin-left:5%;">1920</span></div>
-            <div class="r1 c3 h1 w1 textpanel"><span style="font-size:.75em;text-align:left;margin-left:7%;width:93%;">Water Henry Snell, Professor of Botany</span></div>
+            <div class="r1 c3 h1 w1 textpanel"><span style="font-size:.75em;text-align:left;margin-left:7%;width:93%;">Walter Henry Snell, Professor of Botany</span></div>
             <div class="r1 c2 h2 w1 image" style="background-image: url(images/timeline-images/WalterSnell.jpg);background-size:cover;"></div>
             <!-- <div class="r2 c4 h2 w1" style="background-image: url(images/timeline-images/);background-size:cover;"></div> -->
           </div>
