add "A Botany@Brown Seminar" to title slide, adjust colors/tints

--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -60,12 +60,20 @@
         <div class="c1 r3 w1 h1 image" style="background-image: url(images/BULlogos_v4.png);z-index:10;margin-left:2%;width:21%;opacity:1;">
         </div>
 
-        <div class="c4 r3 w1 h1" style="background-color: #4f3528; opacity: .20;">
+        <div class="c3 r3 w1 h1" style="background-color: white; opacity: .33;">
+        </div>
+
+        <div class="c3 r3 w1 h1" style="background: none;">
+          <p style="font-family:MinionRoman;font-size:10em;color:#4f3528;text-align:left;margin-top:20%;margin-left:12%;">A Botany@Brown Seminar</p>
+        </div>
+
+        <div class="c4 r3 w1 h1" style="background-color: white; opacity: .33;">
         </div>
 
         <div class="c4 r3 w1 h1" style="background: none;">
           <p style="font-family:MinionRoman;font-size:10em;color:#dd0033;text-align:left;margin-top:20%;letter-spacing:.1em;margin-left:10%;">COMMENCEMENT <br /> 2015</p>
         </div>
+
       </div>
 
       <div data-timecontainer="par" data-role="audience">
