add baseball pic to 1920 Snell slide

--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -119,7 +119,7 @@
         <p style="font-family:MinionRoman;font-size:15em;color:white;text-align:center;text-shadow: 10px 10px #4f3528;">So what is a Herbarium?</p>
       </div>
       
-      <div class="c1 r1 w1 h1 image" style="background-image: url(); background: green" data-begin="8s" data-timecontainer="par">
+      <div class="c1 r1 w1 h1 image" style="background-image: url(); background: green" data-begin="3s" data-timecontainer="par">
       </div>
       
       <div data-role="audience" data-timecontainer="par" class="fullscreen-textpanel"
@@ -323,6 +323,7 @@
             <div class="r1 c4 h1 w1"><span style="font-size:52em;color:#e6dec4;width:100%;margin-left:5%;">1920</span></div>
             <div class="r1 c3 h1 w1 textpanel"><span style="font-size:.75em;text-align:left;margin-left:7%;width:93%;">Walter Henry Snell, Professor of Botany</span></div>
             <div class="r1 c2 h2 w1 image" style="background-image: url(images/timeline-images/WalterSnell.jpg);background-size:cover;"></div>
+            <div class="r2 c4 h2 w1 image" style="background-image: url(images/timeline-images/Snell-baseball-enlarged.jpg);"></div>
             <!-- <div class="r2 c4 h2 w1" style="background-image: url(images/timeline-images/);background-size:cover;"></div> -->
           </div>
 
