--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -299,7 +299,7 @@
             data-onbegin="DSL.config.setTimelineTo(3100); DSL.config.showMapPointsTo('1895');">
             <div class="timeline-label" data-begin="2s" style="top: 1800px; left: 1920px">12,500 specimens</div>
             <div class="r1 c4 h1 w1"><span style="font-size:52em;color:#e6dec4;width:100%;margin-left:5%;">1895</span></div>
-            <div class="r1 c3 h1 w1 textpanel"><span style="font-size:.75em;text-align:left;margin-left:7%;width:93%;">Herbarium moved to Maxcy Hall</span></div>
+            <div class="r1 c3 h1 w1 textpanel"><span style="font-size:.75em;text-align:left;margin-left:7%;width:93%;">Herbarium moved to <br /> Maxcy Hall</span></div>
             <div class="r1 c2 h2 w1 image" style="background-image: url(images/timeline-images/MaxcyHall.jpg);background-size:cover;"></div>
             <!-- <div class="r2 c4 h2 w1" style="background-image: url(images/timeline-images/);background-size:cover;"></div> -->
           </div>
