--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -76,8 +76,16 @@
 
       </div>
 
-      <div data-timecontainer="par" data-role="audience">
+      <div data-timecontainer="par" data-role="audience" 
+        class="fullscreen-textpanel-1 fullheight"
+        data-onbegin="$('body').css('background-color', '#faa');">
         <h1>Welcome to the Brown University Commencement talk 2015</h1>
+        <h2>
+          A History of Brown ... as Told By Flowers
+        </h2>
+        <p>Erika Edwards</p>
+        <p>Tim Whitfeld</p>
+        <p>Patrick Rashleigh</p>
       </div>
     </div>
 
