Library slide - Mobile view

--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -103,10 +103,10 @@
       <div data-timecontainer="par" data-role="wall" 
         class="c2 r2 w2 h1 textpanel" style="background-color: #dd0033">
         [ PR intro ]
-      </div>
-
-      <div data-timecontainer="par" data-role="audience">
-
+      </div>      <div data-timecontainer="par" data-role="audience" 
+        class="fullscreen-textpanel-1 fullheight"
+        data-onbegin="$('body').css('background-color', '#faa');">
+        <h1>The Library &mdash; Extending into the Digital</h1>
       </div>
     </div>
 
