"What is?" slide - Mobile view

--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -130,10 +130,10 @@
       <div class="c1 r1 w1 h1 image" style="background-image: url(); background: green" data-begin="3s" data-timecontainer="par">
       </div>
       
-      <div data-role="audience" data-timecontainer="par" class="fullscreen-textpanel"
-        data-onbegin="$('body').css('background-color', '#f55');"
-        data-onend="$('body').css('background-color', 'white');">
-        <span>Mobile view</span>
+      <div data-timecontainer="par" data-role="audience" 
+        class="fullscreen-textpanel-1 fullheight"
+        data-onbegin="$('body').css('background-color', '#ffa');">
+        <h1>What is a Herbarium?</h1>
       </div>
     </div>
 
