Timeline slide - Mobile view

--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -399,9 +399,11 @@
           </div>
         </div>
       </div>
-
-      <div data-timecontainer="par" data-role="audience">
-
+      
+      <div data-timecontainer="par" data-role="audience" 
+        class="fullscreen-textpanel-1 fullheight"
+        data-onbegin="$('body').css('background-color', '#afa');">
+        <h1>The Herbarium over the years ...</h1>
       </div>
     </div>
 
