--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -416,9 +416,11 @@
         class="c1 r1 h3 w4 image" 
         style="background-color: black; background-image: url('images/BlankMap-World6.svg');">
       </div>
-
-      <div data-timecontainer="par" data-role="audience">
-
+      
+      <div data-timecontainer="par" data-role="audience" 
+        class="fullscreen-textpanel-1 fullheight"
+        data-onbegin="$('body').css('background-color', 'black');">
+        <h1>Where have our plants come from?</h1>
       </div>
     </div>
 
@@ -455,9 +457,11 @@
           </div>
         </div>
       </div>
-
-      <div data-timecontainer="par" data-role="audience">
-
+      
+      <div data-timecontainer="par" data-role="audience" 
+        class="fullscreen-textpanel-1 fullheight"
+        data-onbegin="$('body').css('background-color', 'black');">
+        <h1>When plants go digital</h1>
       </div>
     </div>
 
