Attempt at a quick fix for "Time's up" message

--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -503,7 +503,7 @@
         <div class="c2 r2 w2 h1 textpanel" data-begin="0s" data-end="60s">
           <span>Transcribe!</span>
         </div>
-        <div class="c1 r2 w4 h1 textpanel" data-begin="60s"><span>Time's up!</span></div>
+        <div class="c1 r2 w4 h1" data-begin="60s" style="font-size: 500px; line-height: 1080px"><span>Time's up!</span></div>
       </div>
 
       <!-- Audience view -->
