--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -220,7 +220,7 @@
             data-onbegin="DSL.config.setTimelineTo(4400); DSL.config.showMapPointsTo('1869');">
             <div class="timeline-label" data-begin="2s" style="top: 2800px; left: 1100px">1,537 specimens</div>
             <div class="r1 c4 h1 w1"><span style="font-size:52em;color:#e6dec4;width:100%;margin-left:5%;">1869</span></div>
-            <div class="r1 c3 h1 w1 textpanel"><span style="font-size:.75em;text-align:left;margin-left:7%;width:93%;">Stephen Thayer Olney donated his herbarium collection to Brown</span></div>
+            <div class="r1 c3 h1 w1 textpanel"><span style="text-align:left;padding-left:1em;font-size:80%;width:85%;">Stephen Thayer Olney donated his herbarium collection to Brown</span></div>
             <div class="r1 c2 h2 w1 image" style="background-image: url(images/timeline-images/StephenOlney.jpg);background-size:cover;"></div>
             <div class="r1 c1 h1 w1" style="color: silver; font-size: 5em; text-align: right;margin:1em;width:23%;"> 
               ANSP Archives Collection 508 / Courtesy, 
@@ -234,7 +234,7 @@
           <div id="y1877" title="&#8594; 1877" data-timecontainer="par"
             data-onbegin="DSL.config.setTimelineTo(3700); DSL.config.showMapPointsTo('1877');">
             <div class="r1 c4 h1 w1"><span style="font-size:52em;color:#e6dec4;width:100%;margin-left:5%;">1877</span></div>
-            <div class="r1 c3 h1 w1 textpanel"><span style="font-size:.75em;text-align:left;margin-left:7%;width:93%;">William Whitman Bailey started to develop the herbarium (donated ~2,000 specimens)</span></div>
+            <div class="r1 c3 h1 w1 textpanel"><span style="text-align:left;padding-left:1em;font-size:80%;width:85%;">William Whitman Bailey started to develop the herbarium (donated ~2,000 specimens)</span></div>
             <div class="r1 c2 h2 w1 image" style="background-image: url(images/timeline-images/WilliamWhitmanBailey3.jpg);background-size:cover;"></div>
             <div class="r2 c4 h2 w1" style="background-image: url(images/timeline-images/PBRU00005342-Bailey.jpg);background-size:cover;"></div>
           </div>
@@ -244,7 +244,7 @@
           <div id="y1879" title="&#8594; 1879" data-timecontainer="par"
             data-onbegin="DSL.config.setTimelineTo(3650); DSL.config.showMapPointsTo('1879');">
             <div class="r1 c4 h1 w1"><span style="font-size:52em;color:#e6dec4;width:100%;margin-left:5%;">1879</span></div>
-            <div class="r1 c3 h1 w1 textpanel"><span style="font-size:.75em;text-align:left;margin-left:7%;width:93%;">Herbarium moved to Robinson Hall</span></div>
+            <div class="r1 c3 h1 w1 textpanel"><span style="text-align:left;padding-left:1em;font-size:80%;width:85%;">Herbarium moved to Robinson Hall</span></div>
             <div class="r1 c2 h2 w1 image" style="background-image: url(images/timeline-images/RobinsonHall.jpg);background-size:cover;"></div>
             <!-- <div class="r2 c4 h2 w1" style="background-image: url(images/timeline-images/);background-size:cover;"></div> -->
           </div>
@@ -255,7 +255,7 @@
             data-onbegin="DSL.config.setTimelineTo(3600); DSL.config.showMapPointsTo('1880');">
             <div class="timeline-label" data-begin="2s" style="top: 2300px; left: 1920px">8,509 specimens</div>
             <div class="r1 c4 h1 w1"><span style="font-size:52em;color:#e6dec4;width:100%;margin-left:5%;">1880</span></div>
-            <div class="r1 c3 h1 w1 textpanel"><span style="font-size:.75em;text-align:left;margin-left:7%;width:93%;">William Bailey becomes first Professor of Botany at Brown</span></div>
+            <div class="r1 c3 h1 w1 textpanel"><span style="text-align:left;padding-left:1em;font-size:80%;width:85%;">William Bailey becomes first Professor of Botany at Brown</span></div>
             <div class="r1 c2 h2 w1 image" style="background-image: url(images/timeline-images/WilliamWhitmanBailey3.jpg);background-size:cover;"></div>
             <!-- <div class="r2 c4 h2 w1" style="background-image: url(images/timeline-images/);background-size:cover;"></div> -->
           </div>
@@ -265,7 +265,7 @@
           <div id="y1881" title="&#8594; 1881" data-timecontainer="par"
             data-onbegin="DSL.config.setTimelineTo(3600); DSL.config.showMapPointsTo('1881');">
             <div class="r1 c4 h1 w1"><span style="font-size:52em;color:#e6dec4;width:100%;margin-left:5%;">1881</span></div>
-            <div class="r1 c3 h1 w1 textpanel"><span style="font-size:.75em;text-align:left;margin-left:7%;width:93%;">Bailey becomes first Stephen Thayer Olney Professor of Natural History</span></div>
+            <div class="r1 c3 h1 w1 textpanel"><span style="text-align:left;padding-left:1em;font-size:80%;width:85%;">Bailey becomes first Stephen Thayer Olney Professor of Natural History</span></div>
             <div class="r1 c2 h2 w1 image" style="background-image: url(images/timeline-images/WilliamWhitmanBailey3.jpg);background-size:cover;"></div>
             <!-- <div class="r2 c4 h2 w1" style="background-image: url(images/timeline-images/);background-size:cover;"></div> -->
           </div>
@@ -275,7 +275,7 @@
           <div id="y1883" title="&#8594; 1883" data-timecontainer="par"
             data-onbegin="DSL.config.setTimelineTo(3500); DSL.config.showMapPointsTo('1883');">
             <div class="r1 c4 h1 w1"><span style="font-size:52em;color:#e6dec4;width:100%;margin-left:5%;">1883</span></div>
-            <div class="r1 c3 h1 w1 textpanel"><span style="font-size:.75em;text-align:left;margin-left:7%;width:93%;">Herbarium moved to Manning Hall</span></div>
+            <div class="r1 c3 h1 w1 textpanel"><span style="text-align:left;padding-left:1em;font-size:80%;width:85%;">Herbarium moved to Manning Hall</span></div>
             <div class="r1 c2 h2 w1 image" style="background-image: url(images/timeline-images/ManningHall.jpg);background-size:cover;"></div>
             <!-- <div class="r2 c4 h2 w1" style="background-image: url(images/timeline-images/);background-size:cover;"></div> -->
           </div>
@@ -286,7 +286,7 @@
             data-onbegin="DSL.config.setTimelineTo(3400); DSL.config.showMapPointsTo('1890');">
             <div class="timeline-label" data-begin="2s" style="top: 2100px; left: 1920px">10,760 specimens</div>
             <div class="r1 c4 h1 w1"><span style="font-size:52em;color:#e6dec4;width:100%;margin-left:5%;">1890</span></div>
-            <div class="r1 c3 h1 w1 textpanel"><span style="font-size:.75em;text-align:left;margin-left:7%;width:93%;">James Lawrence Bennett, local jeweler and amateur botanist, became curator of the Brown Herbarium</span></div>
+            <div class="r1 c3 h1 w1 textpanel"><span style="text-align:left;padding-left:1em;font-size:80%;width:85%;">James Lawrence Bennett, local jeweler and amateur botanist, became curator of the Brown Herbarium</span></div>
             <!-- <div class="r1 c2 h2 w1 image" style="background-image: url(images/timeline-images/);background-size:cover;"></div> -->
             <!-- <div class="r2 c4 h2 w1" style="background-image: url(images/timeline-images/);background-size:cover;"></div> -->
           </div>
@@ -296,7 +296,7 @@
           <div id="y1894" title="&#8594; 1894" data-timecontainer="par"
             data-onbegin="DSL.config.setTimelineTo(3200); DSL.config.showMapPointsTo('1894');">
             <div class="r1 c4 h1 w1"><span style="font-size:52em;color:#e6dec4;width:100%;margin-left:5%;">1894</span></div>
-            <div class="r1 c3 h1 w1 textpanel"><span style="font-size:.75em;text-align:left;margin-left:7%;width:93%;">James Franklin Collins (left), a silversmith with Gorham Manafacturing, became herbarium curator</span></div>
+            <div class="r1 c3 h1 w1 textpanel"><span style="text-align:left;padding-left:1em;font-size:80%;width:85%;">James Franklin Collins (left), a silversmith with Gorham Manafacturing, became herbarium curator</span></div>
             <div class="r1 c2 h2 w1 image" style="background-image: url(images/timeline-images/Collins.jpg);background-size:cover;"></div>
             <!-- <div class="r2 c4 h2 w1" style="background-image: url(images/timeline-images/);background-size:cover;"></div> -->
           </div>
@@ -307,7 +307,7 @@
             data-onbegin="DSL.config.setTimelineTo(3100); DSL.config.showMapPointsTo('1895');">
             <div class="timeline-label" data-begin="2s" style="top: 1800px; left: 1920px">12,500 specimens</div>
             <div class="r1 c4 h1 w1"><span style="font-size:52em;color:#e6dec4;width:100%;margin-left:5%;">1895</span></div>
-            <div class="r1 c3 h1 w1 textpanel"><span style="font-size:.75em;text-align:left;margin-left:7%;width:93%;">Herbarium moved to <br /> Maxcy Hall</span></div>
+            <div class="r1 c3 h1 w1 textpanel"><span style="text-align:left;padding-left:1em;font-size:80%;width:85%;">Herbarium moved to Maxcy Hall</span></div>
             <div class="r1 c2 h2 w1 image" style="background-image: url(images/timeline-images/MaxcyHall.jpg);background-size:cover;"></div>
             <!-- <div class="r2 c4 h2 w1" style="background-image: url(images/timeline-images/);background-size:cover;"></div> -->
           </div>
@@ -318,7 +318,7 @@
             data-onbegin="DSL.config.setTimelineTo(2700); DSL.config.showMapPointsTo('1911')">
             <div class="r1 c4 h1 w1"><span style="font-size:52em;color:#e6dec4;width:100%;margin-left:5%;">1911</span></div>
             <div class="timeline-label" data-begin="2s" style="top: 2000px; left: 2000px">16,494 specimens</div>
-            <div class="r1 c3 h1 w1 textpanel"><span style="font-size:.75em;text-align:left;margin-left:7%;width:93%;">Halan Harvey York, Professor of Botany</span></div>
+            <div class="r1 c3 h1 w1 textpanel"><span style="text-align:left;padding-left:1em;font-size:80%;width:85%;">Halan Harvey York, Professor of Botany</span></div>
             <div class="r1 c2 h2 w1 image" style="background-image: url(images/timeline-images/HarlenHarveyYork.jpg);background-size:cover;"></div>
             <!-- <div class="r2 c4 h2 w1" style="background-image: url(images/timeline-images/);background-size:cover;"></div> -->
           </div>
@@ -329,7 +329,7 @@
             data-onbegin="DSL.config.setTimelineTo(2500); DSL.config.showMapPointsTo('1920');">
             <div class="timeline-label" data-begin="2s" style="top: 1600px; left: 2400px">17,329 specimens</div>
             <div class="r1 c4 h1 w1"><span style="font-size:52em;color:#e6dec4;width:100%;margin-left:5%;">1920</span></div>
-            <div class="r1 c3 h1 w1 textpanel"><span style="font-size:.75em;text-align:left;margin-left:7%;width:93%;">Walter Henry Snell, Professor of Botany</span></div>
+            <div class="r1 c3 h1 w1 textpanel"><span style="text-align:left;padding-left:1em;font-size:80%;width:85%;">Walter Henry Snell, Professor of Botany</span></div>
             <div class="r1 c2 h2 w1 image" style="background-image: url(images/timeline-images/WalterSnell.jpg);background-size:cover;"></div>
             <div class="r2 c4 h2 w1 image" style="background-image: url(images/timeline-images/Snell-baseball-enlarged.jpg);"></div>
             <!-- <div class="r2 c4 h2 w1" style="background-image: url(images/timeline-images/);background-size:cover;"></div> -->
@@ -341,7 +341,7 @@
             data-onbegin="DSL.config.setTimelineTo(1900); DSL.config.showMapPointsTo('1938');">
             <div class="timeline-label" data-begin="2s" style="top: 1400px; left: 3000px">18,959 specimens</div>
             <div class="r1 c4 h1 w1"><span style="font-size:52em;color:#e6dec4;width:100%;margin-left:5%;">1938</span></div>
-            <div class="r1 c3 h1 w1 textpanel"><span style="font-size:.75em;text-align:left;margin-left:7%;width:93%;">Herbarium moved to Salomon Hall [Center, Rogers Hall?]</span></div>
+            <div class="r1 c3 h1 w1 textpanel"><span style="text-align:left;padding-left:1em;font-size:80%;width:85%;">Herbarium moved to Salomon Hall [Center, Rogers Hall?]</span></div>
             <div class="r1 c2 h2 w1 image" style="background-image: url(images/timeline-images/SalomonCenterRogersHall.jpg);background-size:cover;"></div>
             <!-- <div class="r2 c4 h2 w1" style="background-image: url(images/timeline-images/);background-size:cover;"></div> -->
           </div>
@@ -350,7 +350,7 @@
 
           <div id="y1938-2" title="&#8594; 1938:2" data-timecontainer="par">
             <div class="r1 c4 h1 w1"><span style="font-size:52em;color:#e6dec4;width:100%;margin-left:5%;">1938</span></div>
-            <div class="r1 c3 h1 w1 textpanel"><span style="font-size:.75em;text-align:left;margin-left:7%;width:93%;">George Church became herbarium curator</span></div>
+            <div class="r1 c3 h1 w1 textpanel"><span style="text-align:left;padding-left:1em;font-size:80%;width:85%;">George Church became herbarium curator</span></div>
             <div class="r1 c2 h2 w1 image" style="background-image: url(images/timeline-images/GeorgeLyleChurch007.jpg);background-size:cover;"></div>
             <!-- <div class="r2 c4 h2 w1" style="background-image: url(images/timeline-images/);background-size:cover;"></div> -->
           </div>
@@ -361,7 +361,7 @@
             data-onbegin="DSL.config.setTimelineTo(1100); DSL.config.showMapPointsTo('1987');">
             <div class="timeline-label" data-begin="2s" style="top: 1450px; left: 4000px">19,745 specimens</div>
             <div class="r1 c4 h1 w1"><span style="font-size:52em;color:#e6dec4;width:100%;margin-left:5%;">1987</span></div>
-            <div class="r1 c3 h1 w1 textpanel"><span style="font-size:.75em;text-align:left;margin-left:7%;width:93%;">Herbarium moved to Arnold Lab basement</span></div>
+            <div class="r1 c3 h1 w1 textpanel"><span style="text-align:left;padding-left:1em;font-size:80%;width:85%;">Herbarium moved to Arnold Lab basement</span></div>
             <div class="r1 c2 h2 w1 image" style="background-image: url(images/timeline-images/ArnoldLabBasement.jpg);background-size:cover;"></div>
             <!-- <div class="r2 c4 h2 w1" style="background-image: url(images/timeline-images/);background-size:cover;"></div> -->
           </div>
@@ -371,7 +371,7 @@
           <div id="y19--" title="&#8594; 19--" data-timecontainer="par"
             data-onbegin="DSL.config.setTimelineTo(800); DSL.config.showMapPointsTo('1990');">
             <div class="r1 c4 h1 w1"><span style="font-size:52em;color:#e6dec4;width:100%;margin-left:5%;">19--</span></div>
-            <div class="r1 c3 h1 w1 textpanel"><span style="font-size:.75em;text-align:left;margin-left:7%;width:93%;">Annie Schmitt became herbarium curator</span></div>
+            <div class="r1 c3 h1 w1 textpanel"><span style="text-align:left;padding-left:1em;font-size:80%;width:85%;">Annie Schmitt became herbarium curator</span></div>
             <div class="r1 c2 h2 w1 image" style="background-image: url(images/timeline-images/AnnieSchmitt.jpg);background-size:cover;"></div>
             <!-- <div class="r2 c4 h2 w1" style="background-image: url(images/timeline-images/);background-size:cover;"></div> -->
           </div>
@@ -382,7 +382,7 @@
             data-onbegin="DSL.config.setTimelineTo(400); DSL.config.showMapPointsTo('2008');">
             <div class="timeline-label" data-begin="2s" style="top: 1500px; left: 4600px">19,782 specimens</div>
             <div class="r1 c4 h1 w1"><span style="font-size:52em;color:#e6dec4;width:100%;margin-left:5%;">2008</span></div>
-            <div class="r1 c3 h1 w1 textpanel"><span style="font-size:.75em;text-align:left;margin-left:7%;width:93%;">Erika Edwards became herbarium curator</span></div>
+            <div class="r1 c3 h1 w1 textpanel"><span style="text-align:left;padding-left:1em;font-size:80%;width:85%;">Erika Edwards became herbarium curator</span></div>
             <div class="r1 c2 h2 w1 image" style="background-image: url(images/timeline-images/);background-size:cover;"></div>
             <!-- <div class="r2 c4 h2 w1" style="background-image: url(images/timeline-images/);background-size:cover;"></div> -->
           </div>
@@ -393,7 +393,7 @@
             data-onbegin="DSL.config.setTimelineTo(0); DSL.config.showMapPointsTo('2016');">
             <div class="timeline-label" data-begin="2s" style="top: 1000px; left: 4500px">20,200 specimens</div>
             <div class="r1 c4 h1 w1" data-begin="1s"><span style="font-size:52em;color:#e6dec4;width:100%;margin-left:5%;">2013</span></div>
-            <div class="r1 c3 h1 w1 textpanel"><span style="font-size:.75em;text-align:left;margin-left:7%;width:93%;">Herbarium moved to BioMedical Center</span></div>
+            <div class="r1 c3 h1 w1 textpanel"><span style="text-align:left;padding-left:1em;font-size:80%;width:85%;">Herbarium moved to BioMedical Center</span></div>
             <div class="r1 c2 h2 w1 image" style="background-image: url(images/timeline-images/NewHerbarium3.jpg);background-size:cover;"></div>
             <!-- <div class="r2 c4 h2 w1" style="background-image: url(images/timeline-images/);background-size:cover;"></div> -->
           </div>
