add Tim W. photo & text to 2013 timeline screen

--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -393,9 +393,9 @@
             data-onbegin="DSL.config.setTimelineTo(0); DSL.config.showMapPointsTo('2016');">
             <div class="timeline-label" data-begin="2s" style="top: 1000px; left: 4500px">20,200 specimens</div>
             <div class="r1 c4 h1 w1" data-begin="1s"><span style="font-size:52em;color:#e6dec4;width:100%;margin-left:5%;">2013</span></div>
-            <div class="r1 c3 h1 w1 textpanel"><span style="text-align:left;padding-left:1em;font-size:80%;width:85%;">Herbarium moved to BioMedical Center</span></div>
+            <div class="r1 c3 h1 w1 textpanel"><span style="text-align:left;padding-left:1em;font-size:80%;width:85%;">Herbarium moved to BioMedical Center and Tim Whitfeld became herbarium curator</span></div>
             <div class="r1 c2 h2 w1 image" style="background-image: url(images/timeline-images/NewHerbarium3.jpg);background-size:cover;"></div>
-            <!-- <div class="r2 c4 h2 w1" style="background-image: url(images/timeline-images/);background-size:cover;"></div> -->
+            <div class="r2 c4 h2 w1 image" style="background-image: url(images/Tim-Whitfeld.jpg);background-size:cover;"></div>
           </div>
         </div>
       </div>
