Added live picture of Carex Sterols

--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -702,8 +702,9 @@
           <!-- Carex sterilis -->
 
           <div id="cat-swamp-specimen-4" title="&#8594; Carex Sterilis" data-timecontainer="par">
-            <div class="w1 h3 r1 c3 image-cover" style="background-image: url(images/Carex-sterilis.jpg)"></div><!--
-            <div class="w1 h1 r1 c4 image-cover" style="background-image: url(images/caltha-palustris_live.jpg)"></div>-->
+            <div class="w1 h3 r1 c3 image-cover" style="background-image: url(images/Carex-sterilis.jpg)"></div>
+            <div class="w1 h1 r1 c4 image-cover" style="background-image: url(images/Carex-sterilis_live.jpg)
+                 data-begin="2s"></div>
           </div>
 
           <!--Berberis vulgaris-->
