Tim's edit #4 from list (but spelled "Salomon" not Soloman)

--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -341,7 +341,7 @@
             data-onbegin="DSL.config.setTimelineTo(1900); DSL.config.showMapPointsTo('1938');">
             <div class="timeline-label" data-begin="2s" style="top: 1400px; left: 3000px">18,959 specimens</div>
             <div class="r1 c4 h1 w1"><span style="font-size:52em;color:#e6dec4;width:100%;margin-left:5%;">1938</span></div>
-            <div class="r1 c3 h1 w1"><p class="event-blurb">Herbarium moved to Salomon Hall [Center, Rogers Hall?]</p></div>
+            <div class="r1 c3 h1 w1"><p class="event-blurb">Herbarium moved to Rogers Hall (now Salomon Center)</p></div>
             <div class="r1 c2 h2 w1 image" style="background-image: url(images/timeline-images/SalomonCenterRogersHall.jpg);background-size:cover;"></div>
             <!-- <div class="r2 c4 h2 w1" style="background-image: url(images/timeline-images/);background-size:cover;"></div> -->
           </div>
